tests/rosetta/transpiler/Elixir/factorial-base-numbers-indexing-permutations-of-a-collection.error
run: exit status 1
** (MismatchedDelimiterError) mismatched delimiter found on /workspace/mochi/tests/rosetta/transpiler/Elixir/factorial-base-numbers-indexing-permutations-of-a-collection.exs:437:10:
     error: unexpected token: )
     │
 361 │       {perms} = Enum.reduce(factNums, {perms}, fn fn, {perms} ->
     │                                                └ unclosed delimiter
 ...
 437 │       end)
     │          └ mismatched closing delimiter (expected "end")
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/factorial-base-numbers-indexing-permutations-of-a-collection.exs:437:10
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
